# AI-Customer-Support-Agent

./: .gitignore  API_REFERENCE.md  main.py  pyproject.toml  search_result.json
api/: main.py
api/routes/: chat.py  health.py
core/logging/: logger.py
llm/: base.py  factory.py  openai_client.py
llm/prompts/: system.py
mcp_integration/: client.py
schemas/: chat.py
